@@ -1,6 +1,7 @@
 Changelog for App-Magpie
 
 {{$NEXT}}
+ - logger: log correctly when error in external command 
 
 2.005     2014-02-25 13:58:34+01:00 Europe/Paris
  - forcing directory removal with Path::Tiny
